SNMP4SDN Project Documents: get started guide, user guide, developer guide
Change-Id: I3352086287e5d6e1a6f21401997e7f7913f81026
Signed-off-by: ylhsieh <ylhsieh@itri.org.tw>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -107,6 +107,8 @@ include::packetcable/packetcable-dev.adoc[Packet Cable PCMM Southbound Plugin]
 
 include::sfc/sfc.adoc[]
 
+include::snmp4sdn/snmp4sdn-developer.adoc[SNMP4SDN]
+
 include::sxp/odl-sxp-dev.adoc[]
 
 include::tcpmd5/odl-tcpmd5-all-dev.adoc[TCP-MD5]
