Documentation for map register cache.
Added documentation for map register cache performance improvement in
lispflowmapping project.

Change-Id: I3b8f2c465dbbb02bab82b5afb2e4cd62806da35c
Signed-off-by: Jozef Gloncak <jgloncak@cisco.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -74,6 +74,8 @@ include::l2switch/l2switch-dev.adoc[]
 
 include::lacp/lacp-dev.adoc[]
 
+include::lispflowmapping/odl-lispflowmapping-dev.adoc
+
 include::messaging4transport/messaging4transport-developer.adoc[]
 
 include::controller/netconf/odl-netconf-dev.adoc[]
