Documentation outline for usecplugin
Change-Id: I0e881b73a30113905b92144166be672c26c6a4f2
Signed-off-by: Thomas Lee S <thomaslee.s@tcs.com>

--- a/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
+++ b/manuals/developer-guide/src/main/asciidoc/bk-developers-guide.adoc
@@ -129,6 +129,10 @@ include::yangtools/yangtools.adoc[]
 
 include::yang-push/odl-yang-push-dev.adoc[YANG-PUSH]
 
+include::usecplugin/odl-usecplugin-openflow-dev.adoc[USECPLUGIN-OPENFLOW]
+
+include::usecplugin/odl-usecplugin-aaa-dev.adoc[USECPLUGIN-AAA]
+
 :numbered!:
 
 ///////
