--- a/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
+++ b/manuals/user-guide/src/main/asciidoc/bk-user-guide.adoc
@@ -93,3 +93,7 @@ include::vtn/vtn-user.adoc[]
 include::controller/netconf/odl-netconf-user.adoc[]
 
 include::yang-push/odl-yang-push-user.adoc[YANG-PUSH]
+
+include::usecplugin/odl-usecplugin-openflow-user.adoc[USECPLUGIN-OPENFLOW]
+
+include::usecplugin/odl-usecplugin-aaa-user.adoc[USECPLUGIN-AAA]
